--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.gobravery</groupId>
 	<artifactId>format</artifactId>
-	<version>2.3</version>
+	<version>2.5</version>
 	<packaging>jar</packaging>
 
 	<name>format</name>
@@ -16,7 +16,13 @@
 		<java.version>1.8</java.version>
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 	</properties>
-
+	<distributionManagement> <!-- 远程部署管理信息 -->
+		<repository> <!--部署项目产生的构件到远程仓库需要的信息 -->
+			<id>releases</id>
+			<name>css Nexus Release Repository</name>
+			<url>http://10.192.1.18:8081/nexus/content/repositories/thirdparty</url>
+		</repository>
+	</distributionManagement>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -47,10 +53,13 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/commons-digester/commons-digester -->
 		<dependency>
-			<groupId>commons-digester</groupId>
-			<artifactId>commons-digester</artifactId>
-			<version>2.1</version>
+			<!--groupId>commons-digester</groupId> <artifactId>commons-digester</artifactId> 
+				<version>2.1</version -->
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-digester3</artifactId>
+			<version>3.2</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.freemarker</groupId>
 			<artifactId>freemarker</artifactId>
@@ -61,6 +70,12 @@
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
 			<version>1.2.62</version>
+		</dependency>
+		<!-- 用于svg转png包 -->
+		<dependency>
+			<groupId>org.apache.xmlgraphics</groupId>
+			<artifactId>batik-codec</artifactId>
+			<version>1.11</version>
 		</dependency>
 	</dependencies>
 </project>
