--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.gobravery</groupId>
 	<artifactId>format</artifactId>
-	<version>2.8</version>
+	<version>3.0</version>
 	<packaging>jar</packaging>
 
 	<name>format</name>
@@ -28,7 +28,7 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
-			<scope>test</scope>
+<!-- 			<scope>test</scope> -->
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
 		<dependency>
@@ -77,5 +77,10 @@
 			<artifactId>batik-codec</artifactId>
 			<version>1.11</version>
 		</dependency>
+		<dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.28</version>
+        </dependency>
 	</dependencies>
 </project>
